--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   rxdart: ^0.27.5
   fluttertoast: ^8.0.9
   shared_preferences: ^2.0.15
+  wheel_chooser: ^1.0.0
 
 dev_dependencies:
   flutter_test:
